<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simpsontv"
    tools:context="app.donation.Signup">

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="98dp"
        android:text="@string/signupTitle"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signupSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/signupSubtitle"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupTitle" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/signupFirstName"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupSubtitle"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="250dp"
        android:layout_height="47dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/signupLastName"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="250dp"
        android:layout_height="43dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/signupEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/signupPassword"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/register"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="94dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="signupPressed"
        android:text="@string/signupRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>