<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clouds">

    <Button
        android:id="@+id/welcomeLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeLogin"
        android:onClick="loginPressed"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintRight_toLeftOf="@+id/welcomeSignup"
        android:layout_marginEnd="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.028" />

    <Button
        android:id="@+id/welcomeSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeSignup"
        android:onClick="signupPressed"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:text="@string/welcomeText"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="119dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="244dp"
        android:layout_height="220dp"
        android:src="@drawable/homer1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="109dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        android:contentDescription="@string/welcomeText" />

</android.support.constraint.ConstraintLayout>